# finance-master

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_dev  README.md  alembic.ini  docker-compose.yml  fly.toml  main.py  pyproject.toml
alembic/versions/: 6a1d48f4f221_create_finance_master_database.py
analyzer/: pyproject.toml
analyzer/analyzer/: constants.py  read_data.py
controllers/: summary_controller.py
finance_analyzer/: read_data.py
sql/: create_tables.sql
src/: constants.py  crud.py  database.py  main.py
src/controllers/: category_controller.py  db_controller.py  ex_ante_controller.py  summary_controller.py  take_home_pay.py  take_home_pay_controller.py  tax_controller.py  transactions_controller.py
src/finance_analyzer/: constants.py  read_data.py
src/middleware/: constants.py  validate_token.py
src/models/: transactions.py
src/schemas/: __init__.py  transactions.py
src/services/: __init__.py  convert_to_dataframe.py
src/services/finance_analyzer/: categories.py  constants.py  ex_ante.py  process_data.py  read_data.py  take_home_pay.py  tax.py
src/utils/: __init__.py  check_duplicates.py  convert_data.py  utils.py
