[tool.poetry]
name = "finance-analyzer"
version = "0.1.0"
description = ""
authors = ["Maciej Gierada <maciek.gierada@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
jupyterlab = "^3.6.3"
black = "^23.3.0"
fastapi = "^0.109.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.3"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
